--- a/Task-5/todo/src/app/components/bars/default-bar/default-bar.component.html
+++ b/Task-5/todo/src/app/components/bars/default-bar/default-bar.component.html
@@ -1,22 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/signin">Signin</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/signup">Signup</a>
-          </li>
-          
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="text-white navbar-brand" routerLink="/">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon "></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="text-white nav-link active" aria-current="page" routerLink="/">Home</a>
+        </li>
+        <li class="nav-item" *ngIf="!userLoggedIn">
+          <a class="text-white nav-link" routerLink="/signin">Signin</a>
+        </li>
+        <li class="nav-item" *ngIf="!userLoggedIn">
+          <a class="text-white nav-link" routerLink="/signup">Signup</a>
+        </li>
+        <li class="nav-item" *ngIf="userLoggedIn">
+          <a class="text-white nav-link" (click)="signout()">Sign out</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
