--- a/Task-5/todo/src/app/components/footers/default-footer/default-footer.component.html
+++ b/Task-5/todo/src/app/components/footers/default-footer/default-footer.component.html
@@ -1,10 +1,10 @@
-<footer class="py-3 mt-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-    </ul>
-    <p class="text-center text-muted">© 2021 Company, Inc</p>
-  </footer>
+<footer class="py-3 mt-4 bg-dark text-white">
+  <ul class="nav justify-content-center pb-2 mb-2">
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Home</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Features</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
+  </ul>
+  <p class="text-center text-muted">© 2021 Company, Inc</p>
+</footer>
