--- a/Task-5/todo/src/app/views/home/home.component.html
+++ b/Task-5/todo/src/app/views/home/home.component.html
@@ -1,1 +1,5 @@
+<div class="alert alert-danger" role="alert" *ngFor="let err of errors">
+    {{err}}
+</div>
+<app-action-bar></app-action-bar>
 <app-todo-list></app-todo-list>
