--- a/Task-5/todo/src/app/app.component.html
+++ b/Task-5/todo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-default-bar></app-default-bar>
-<div class="container">
+<div class="container 100-vh">
     <router-outlet></router-outlet>
 </div>
 <app-default-footer></app-default-footer>
