--- a/Task-5/todo/src/app/components/bars/default-bar/default-bar.component.html
+++ b/Task-5/todo/src/app/components/bars/default-bar/default-bar.component.html
@@ -1,12 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container d-flex">
-    <a class="text-white navbar-brand" routerLink="/">Navbar</a>
+    <a class="text-white navbar-brand" routerLink="/">YoUr ToDoS</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon "></span>
     </button>
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
       <ul class="navbar-nav">
+        <li class="nav-item" *ngIf="userLoggedIn">
+          <a class="text-white nav-link">Hi {{user.name}}</a>
+        </li>
         <li class="nav-item">
           <a class="text-white nav-link active" aria-current="page" routerLink="/">Home</a>
         </li>
