--- a/Task-5/todo/src/app/components/bars/action-bar/action-bar.component.html
+++ b/Task-5/todo/src/app/components/bars/action-bar/action-bar.component.html
@@ -1,5 +1,9 @@
-<ul class="nav justify-content-end mb-5">
-    <li class="nav-item">
-        <a class="nav-link text-primary" routerLink="/form/new"> Create Todo</a>
-    </li>
-</ul>
+<div class="card">
+    <div class="card-body text-center bg-light">
+        <h5 class="card-title"> Your Title </h5>
+        <p class="card-text">Your Content...</p>
+        <div class="d-flex justify-content-around align-items-center">
+            <button class="btn btn-success" routerLink="/form/new">Create New Todo</button>
+        </div>
+    </div>
+</div>
