--- a/Task-5/todo/src/app/components/bars/default-bar/default-bar.component.html
+++ b/Task-5/todo/src/app/components/bars/default-bar/default-bar.component.html
@@ -7,8 +7,9 @@
     </button>
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item" *ngIf="userLoggedIn">
-          <a class="text-white nav-link">Hi {{user.name}}</a>
+        <li class="nav-item mx-3" *ngIf="userLoggedIn">
+          <a class="text-white nav-link">Hi  {{user.name}} <i class="fas fa-user mx-2"></i>
+          </a>
         </li>
         <li class="nav-item">
           <a class="text-white nav-link active" aria-current="page" routerLink="/">Home</a>
