--- a/Task-5/todo/src/app/components/todo-list/todo-list.component.html
+++ b/Task-5/todo/src/app/components/todo-list/todo-list.component.html
@@ -1,32 +1,7 @@
-<div class="row">
+<div class="row mt-5 mb-3">
     <div class='col col-sm-12 col-md-6 my-3' *ngFor="let todo of todos">
         <app-todo-list-item [todo]="todo"></app-todo-list-item>
     </div>
+    <app-action-bar class='col col-sm-12 col-md-6 my-3'></app-action-bar>
 </div>
 
-
-
-<!-- <app-todo-form></app-todo-form>
-
-
-<ul class='list'>
-    <app-todo-list-item
-        *ngFor="let todo of todos"
-        [todoData]="todo"        
-    ></app-todo-list-item>
-</ul> -->
-
-
-
-<!-- <app-todo-form
-    (todoReady)="addTodo($event)"
-></app-todo-form> -->
-
-
-<!-- <ul class='list'>
-    <app-todo-list-item
-        *ngFor="let todo of todos"
-        [todoData]="todo"
-        (itemClicked)="deleteTodo($event)"
-    ></app-todo-list-item>
-</ul> -->
