--- a/Task-5/todo/src/app/components/bars/default-bar/default-bar.component.html
+++ b/Task-5/todo/src/app/components/bars/default-bar/default-bar.component.html
@@ -21,7 +21,7 @@
           <a class="text-white nav-link" routerLink="/signup">Signup</a>
         </li>
         <li class="nav-item" *ngIf="userLoggedIn">
-          <a class="text-white nav-link" (click)="signout()">Sign out</a>
+          <a class="text-white nav-link pointer" (click)="signout()">Sign out</a>
         </li>
       </ul>
     </div>
